--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="bttn">Choose Grid Size</button>
     <div id="container">
 
     </div>
