Added functionality to the button When clicking the button a prompt ask the user to enter a number to create a new grid. After the user enters the number the old grid is removed and a new grid is created with the ability to still 'draw' it.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <button id="bttn">Choose Grid Size</button>
+    <button id="replace-grid">Choose Grid Size</button>
     <div id="container">
 
     </div>
